--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!Image using Path>
       <img src="image/syed.jpg" alt="Syed Subhani Profile Picture"></td>
       <td><h1>Syed Subhani</h1>
-      <p>Founder and <i><strong>CTO</strong></i> of the <strong><a href="https://www.nike.com">Nike</a></strong> </p>
+      <p>Founder and <i><strong>CTO</strong></i> of the <strong><a href="https://tobishan.in">Tobishan</a></strong> </p>
       <p>I am an ios and web developer . i love nothing</p></td>
     </tr>
   </table>
